--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>markdowneditor</title>
+    <link rel="stylesheet" href="static/vendor/css/prism.min.css">
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <script src="static/vendor/js/prism.min.js"></script>
   </body>
 </html>
