--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>markdowneditor</title>
-    <link rel="stylesheet" href="static/vendor/css/prism.min.css">
+    <style src="static/vendor/css/prism.min.css"></style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Markdown Editor</title>
   </head>
   <body>
     <div id="app"></div>
