--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="static/bower_components/syncscroll/syncscroll.js"></script>
   </body>
 </html>
